# NER-Korets

./: .dockerignore  .env_example  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  tets.ipynb
data/docs/: context.md
model/: NER_Korets.ipynb
src/backend/: main.py
src/backend/agent/: agent.py
src/backend/api/: deps.py
src/backend/api/v1/: agent.py  tools.py
src/backend/mcp/: client.py  server.py
src/backend/tools/: ner.py  rag.py
src/backend/utils/: configs.py
src/frontend/: app.py
