[project]
name = "agent-korets"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "faiss-cpu>=1.12.0",
    "fastapi>=0.116.1",
    "ipykernel>=6.30.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.74",
    "langchain-openai>=0.3.31",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "streamlit>=1.49.0",
    "transformers>=4.55.3",
    "uvicorn[standard]>=0.35.0",
]
